--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Maitree:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;300;400;500;600;700;800;900&display=swap');
 /* font-family: 'Kanit', sans-serif; */
-/* font-family: 'Maitree', serif; */
 * {
     margin: 0;
     padding: 0;
@@ -10,9 +7,12 @@
     font-family: 'Kanit', sans-serif;
     color: rgb(75, 75, 75);
 }
-
+main{
+    margin-bottom: 5rem;
+}
 .main {
     margin: 2rem;
+    margin-bottom: 5rem;
 }
 
 ul {
@@ -145,7 +145,8 @@ ul li {
     padding-right: 6rem;
     margin: 1.5rem 0;
 }
-.square2 p{
+
+.square2 p {
     display: flex;
     text-align: end;
 }
@@ -154,5 +155,59 @@ ul li {
 .square2 p {
     color: #ffff;
     font-size: 25px;
-    font-weight: lighter;
+    font-weight: light;
+}
+
+.botoes {
+    position: fixed;
+    bottom: 0;
+    margin: 0 39%;
+}
+
+.button {
+    border: 1px solid #26a737;
+    border-radius: 7px;
+    color: #26a737;
+    background: none;
+    padding: 7px;
+    margin: 1rem;
+    opacity: 80%;
+}
+
+.button_white {
+    color: #ffff;
+    border: 1px solid #ffff;
+    border-radius: 7px;
+    background: none;
+    padding: 7px;
+    margin: 1rem;
+    opacity: 80%;
+}
+
+.icone {
+    color: #26a737;
+    margin: 0 5px;
+}
+
+.icone_white {
+    color: #ffff;
+    margin: 0 5px;
+}
+
+.button:hover {
+    color: #ffff;
+    background-color: #26a737;
+}
+
+.button_white:hover {
+    color: #26a737;
+    background-color: #ffff;
+}
+
+.button:hover>.icone {
+    color: #ffff;
+}
+
+.button_white:hover>.icone_white {
+    color: #26a737;
 }
