--- a/assets/style.css
+++ b/assets/style.css
@@ -127,11 +127,6 @@ a {
 }
 
 /* TITULO OBJETIVOS PARA CENTRALIZAR  */
-.objetivos {
-    margin: 30px 0;
-    display: flex;
-    text-align: left;
-}
 
 .title_white_green {
     margin: 0.2em 0;
@@ -170,12 +165,7 @@ a {
     margin-top: 2.5rem;
 }
 
-/* COLUNA QUE DIVIDE IMAGEM E CAIXAS DE TEXTO DA PAGINA DE PRINCIPIOS  */
-.wrapper {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    margin-top: 2rem;
-}
+
 
 /* IMAGENS DAS PAGINAS COM CAIXA DE TEXTO  */
 .img_pessoa {
@@ -402,10 +392,177 @@ a {
     color: rgb(75, 75, 75);
 }
 
-strong a{
+strong a {
     font-weight: lighter;
 }
-.txt_white{
+
+.txt_white {
     color: #ffff;
     padding-bottom: 30px;
+}
+.acessar {
+    padding-bottom: 30px;
+    margin-top: -40px;
+}
+
+/* RESPONSIVIDADE PARA COMPUTADOR */
+
+@media screen {
+    @media (min-width:769px) {
+
+        /* COLUNA QUE DIVIDE IMAGEM E CAIXAS DE TEXTO DA PAGINA DE PRINCIPIOS  */
+        .wrapper {
+            display: grid;
+            grid-template-columns: 50% 50%;
+            margin-top: 2rem;
+        }
+
+        .objetivos {
+            margin: 30px 0;
+            display: flex;
+            text-align: left;
+        }
+
+    }
+}
+
+
+
+/* RESPONSIVIDADE PARA CELULAR */
+
+@media screen {
+    @media (max-width:800px) {
+        .main {
+            box-shadow: none;
+            margin: 10px 30px;
+            padding: 0;
+        }
+
+        .img_index {
+            width: 90%;
+            height: auto;
+            margin: 3em 0 0 0;
+        }
+
+        .logo_egp {
+            height: 50px;
+        }
+
+        .logo_seplag {
+            height: 60px;
+        }
+
+        .title {
+            font-size: 3em;
+        }
+
+        .description {
+            font-size: 10px;
+        }
+
+        .title_white {
+            font-size: 30px !important;
+            font-weight: bold;
+            padding-top: 30px;
+            display: flex;
+            text-align: left;
+        }
+
+        .title_orange {
+            margin-top: -5px;
+        }
+
+        .logo {
+            margin-top: 70px;
+            height: 70px;
+        }
+
+        .background_img {
+            display: none;
+        }
+
+        .margin_title {
+            margin: 0;
+        }
+
+        .p_white {
+            font-size: 20px;
+            max-width: 100%;
+        }
+
+        .responsive_center {
+            display: flex;
+            justify-content: center;
+        }
+
+        .logo04 {
+            width: 100px;
+        }
+
+        .img_pessoa {
+            display: none;
+        }
+
+        .square {
+            padding: 2rem;
+            padding-left: 2rem;
+            margin: 1.5rem 0;
+        }
+
+        .square2 {
+            padding: 2rem;
+            padding-left: 2rem;
+            margin: 1.5rem 0;
+        }
+
+        .title_principios {
+            font-size: 25px;
+        }
+
+        p {
+            font-size: 15px !important;
+        }
+
+        .square .title {
+            font-size: 22px;
+        }
+
+        .square2 .title {
+            font-size: 22px;
+        }
+
+        .paragrafo12 {
+            font-size: 40px;
+            margin: 1em 1em;
+        }
+
+        .img12 {
+            width: 100%;
+            height: auto;
+        }
+
+        .ol,
+        ul {
+            padding-left: 0 !important;
+        }
+
+        .lista {
+            margin: 1em;
+            font-size: 20px;
+        }
+
+        .lista_gray {
+            margin: 1em;
+            font-size: 20px;
+        }
+
+        .img14 {
+            margin-top: 0;
+        }
+
+        .rodape {
+            font-size: 5px;
+
+        }
+    }
 }
